# so-commons-library

./: .gitignore
.github/workflows/: docs.yml
src/commons/collections/: dictionary.c  dictionary.h  list.c  list.h  vector.c  vector.h
tests/unit-tests/: CMakeLists.txt  makefile  test_list.c  test_vector.c
tests/unit-tests/src/: iterators.h  person.c  utils.h
tests/unit-tests/tests/: asserts.h  main.cpp  test_bitarray.cpp  test_config.cpp  test_dictionary.cpp  test_list.cpp  test_memory.cpp  test_queue.cpp  test_string.cpp
tests/unit-tests/tests/utils/: iterators.c  person.h
